fix custom view for scrollbar in firefox

--- a/source/style/03-dialog-with-bot.css
+++ b/source/style/03-dialog-with-bot.css
@@ -4,6 +4,8 @@
 	margin-bottom: .5em;
 	overflow-y: hidden;
 	padding: 1em 1em 0 0;
+  	scrollbar-color: #fff #282828;
+  	scrollbar-width: thin;
 }
 
 .chat-window__history:hover {
